--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "usr/src/application/",
+            "Core\\Application\\": "sbin/application/src/",
+            "Core\\Controller\\": "sbin/controller/src/",
+            "Core\\Router\\": "sbin/router/src/"
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "vendor-dir": "lib"
     }
 }
